Added build command at package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "start": "electron index.js"
+    "start": "electron index.js",
+    "build": "npx electron-builder"
   },
   "build": {
     "appId": "your.id",
